testdata/baselines/reference/submodule/conformance/contextualTypedSpecialAssignment.errors.txt
mod.js(5,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(9,4): error TS2339: Property 'x' does not exist on type '{}'.
test.js(11,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(14,4): error TS2339: Property 'x' does not exist on type '{}'.
test.js(16,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(18,4): error TS2339: Property 'x' does not exist on type '{}'.
test.js(25,14): error TS2339: Property 's' does not exist on type 'Thing'.
test.js(27,15): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(32,14): error TS2339: Property 's' does not exist on type 'Thing'.
test.js(34,15): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(42,1): error TS7022: 'x' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
test.js(44,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(49,1): error TS7022: 'y' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
test.js(51,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(57,17): error TS2339: Property 'x' does not exist on type 'Thing'.
test.js(59,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(61,17): error TS2339: Property 'x' does not exist on type 'Thing'.
test.js(69,7): error TS7006: Parameter 'n' implicitly has an 'any' type.


==== test.js (17 errors) ====
    /** @typedef {{
        status: 'done'
        m(n: number): void
    }} DoneStatus */
    
    // property assignment
    var ns = {}
    /** @type {DoneStatus} */
    ns.x = {
       ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
        status: 'done',
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    
    ns.x = {
       ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
        status: 'done',
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    ns.x
       ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
    
    
    // this-property assignment
    class Thing {
        constructor() {
            /** @type {DoneStatus} */
            this.s = {
                 ~
!!! error TS2339: Property 's' does not exist on type 'Thing'.
                status: 'done',
                m(n) { }
                  ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
            }
        }
    
        fail() {
            this.s = {
                 ~
!!! error TS2339: Property 's' does not exist on type 'Thing'.
                status: 'done',
                m(n) { }
                  ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
            }
        }
    }
    
    // exports-property assignment
    
    /** @type {DoneStatus} */
    exports.x = {
    ~~~~~~~~~~~~~
        status: "done",
    ~~~~~~~~~~~~~~~~~~~
        m(n) { }
    ~~~~~~~~~~~~
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    ~
!!! error TS7022: 'x' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    exports.x
    
    /** @type {DoneStatus} */
    module.exports.y = {
    ~~~~~~~~~~~~~~~~~~~~
        status: "done",
    ~~~~~~~~~~~~~~~~~~~
        m(n) { }
    ~~~~~~~~~~~~
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    ~
!!! error TS7022: 'y' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    module.exports.y
    
    // prototype-property assignment
    /** @type {DoneStatus} */
    Thing.prototype.x = {
                    ~
!!! error TS2339: Property 'x' does not exist on type 'Thing'.
        status: 'done',
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    Thing.prototype.x
                    ~
!!! error TS2339: Property 'x' does not exist on type 'Thing'.
    
    // prototype assignment
    function F() {
    }
    /** @type {DoneStatus} */
    F.prototype = {
        status: "done",
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    
==== mod.js (1 errors) ====
    // module.exports assignment
    /** @type {{ status: 'done', m(n: number): void }} */
    module.exports = {
        status: "done",
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    